css/main.css
/* 
    font-family: 'Source Sans Pro', sans-serif;
    400, 600, 700
    font-family: 'Fredoka One', cursive;
*/

    /*      General settings        */
html {
    width: 100%;
    height: 100%;
}
html, body{
    margin:0;
    padding:0;
    box-sizing: content-box;
}
body {
    font-family: 'Fredoka One', cursive;
    color:#7e557f;
    width: 100%;
    height: 100%;
    overflow-x: hidden; /* prevent sreen scroll from smaller screens */
}
.col-12{
    text-align:center;
    padding:0; /* reset bootstrap padding */
}
    /*      Backgrounds        */
.wrapper{
    background-image: url("../assets/img/bg1.jpg");
    background-position: center left;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed; /* Fills whitespace createt on iphone */
}
    /*      Welcome phrase        */
#two-language-heading{
    margin-top:30px;
    font-size: 60px;
    letter-spacing: 2px;
    opacity:0;          /* Gets visibility with javascript */
    transition: opacity .8s ease-in-out;
}
header h1 span{
    display:block;
    font-size: 50%;
}
    /*      Buttons        */
.btn-language img{
    margin:10px 0 10px 0;
    opacity:0.8;
    width:120px;
    height:90px;
    transition: all .2s ease-in-out;
}
.btn-language img:hover{
    opacity:1;
    width:130px;
    height:100px;
}
    /*      Footer        */
footer button{
    position: absolute;
    bottom:25px;
    right:20px;
    width:50px;
    padding:5px; 
    color:#a874a8;
    background-color:#7e557f;
    font-size: 24px;
    border:none;
    border-radius: 5px;
    transition: background-color .3s ease-in;
}
footer button:hover{
    color:#7e557f;
    background-color:#a874a8;
} 
   /* Info when clicked */
#showHowItWorks{
    font-family: 'Source Sans Pro', sans-serif;
    position: fixed;
    width:100vw;
    height:100vh;
    top:0;
    left:0;
    background-color:rgba(36, 36, 36, 0.9);
    display:flex;
    margin-left:1px;
    align-items: center;
    justify-content: center;
    font-size:;
    color:#a874a8;
    visibility:hidden;
}

